--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 
  3. Skriv en kort sammanfattning av vad som är fel och hur det kan åtgärdas.
 
+ Onödig JavaScript som gör sidan söligare och tar bort funktionalitet för att kunna backa på sidan.
+ Saknar alt text på bilder, kan åtgardas genom att lägga till alt texter.
+
  4. Skriv om koden så att den följer tillgänglighetsstandarder.
 
  5. Skriv en kort sammanfattning av vad du har ändrat och varför.
+
+Tog bort all JavaScript kod då den inte bidrar med någonting för användaren eller ägaren, bara gör sidan mer långsam.
+Jag har lag till alt texter på alla bilder då det är viktigt för användare som använder skärmläsare eller om bilden inte laddas in.
 
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
@@ -101,7 +107,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
           <div class="product-grid">
             <div class="product-card">
               <div class="product-image">
-                <img src="https://images.unsplash.com/photo-1602816130091-c3c6b8b28060?q=80&w=1888&auto=format&fit=crop">
+                <img src="https://images.unsplash.com/photo-1602816130091-c3c6b8b28060?q=80&w=1888&auto=format&fit=crop" alt="Terra Sculptural Vase with a matte finish">
               </div>
               <div class="product-info">
                 <span class="product-category">Ceramic</span>
@@ -115,7 +121,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
             Ensure heading levels are used logically for better accessibility and screen reader navigation. -->
             <div class="product-card">
               <div class="product-image">
-                <img src="https://images.unsplash.com/photo-1581783342308-f792dbdd27c5?q=80&w=1964&auto=format&fit=crop">
+                <img src="https://images.unsplash.com/photo-1581783342308-f792dbdd27c5?q=80&w=1964&auto=format&fit=crop" alt="Mouth-blown glass vase">
               </div>
               <div class="product-info">
                 <span class="product-category">Glass</span>
@@ -127,7 +133,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 
             <div class="product-card">
               <div class="product-image">
-                <img src="https://images.unsplash.com/photo-1578500351865-ea7deed19bd0?q=80&w=1887&auto=format&fit=crop">
+                <img src="https://images.unsplash.com/photo-1578500351865-ea7deed19bd0?q=80&w=1887&auto=format&fit=crop" alt="Minimalist Vase with clean lines and white porcelain">
               </div>
               <div class="product-info">
                 <span class="product-category">Porcelain</span>
@@ -139,7 +145,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 
             <div class="product-card">
               <div class="product-image">
-                <img src="https://images.unsplash.com/photo-1582131503261-fca1d1c0589f?q=80&w=1974&auto=format&fit=crop">
+                <img src="https://images.unsplash.com/photo-1582131503261-fca1d1c0589f?q=80&w=1974&auto=format&fit=crop" alt="Ceramic, organic and handcrafted vase.">
               </div>
               <div class="product-info">
                 <span class="product-category">Ceramic</span>
@@ -157,7 +163,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
         <div class="container">
           <div class="philosophy-content">
             <div class="philosophy-image">
-              <img src="https://images.unsplash.com/photo-1576020799627-aeac74d58064?q=80&w=1964&auto=format&fit=crop">
+              <img src="https://images.unsplash.com/photo-1576020799627-aeac74d58064?q=80&w=1964&auto=format&fit=crop" alt="Fancy table with old plates, gold forks, tiny pumpkins, and candles.">
               <div class="quote-box">
                 <!-- a-tag, should be p-tag -->
                 <a>"Simplicity is the ultimate sophistication."</a>
