Fix html tag, declaration and language

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 
  Onödig JavaScript som gör sidan söligare och tar bort funktionalitet för att kunna backa på sidan.
  Saknar alt text på bilder, kan åtgardas genom att lägga till alt texter.
+ HTML tag, deklaration och språk
 
  4. Skriv om koden så att den följer tillgänglighetsstandarder.
 
@@ -24,6 +25,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 
 Tog bort all JavaScript kod då den inte bidrar med någonting för användaren eller ägaren, bara gör sidan mer långsam.
 Jag har lag till alt texter på alla bilder då det är viktigt för användare som använder skärmläsare eller om bilden inte laddas in.
+Fixat html Tag, deklaration och språk till engelska.
 
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
@@ -31,9 +33,8 @@ Jag har lag till alt texter på alla bilder då det är viktigt för användare 
  ____________________________________________________________________________________________________
 
 -->
-
-
 <!DOCTYPE html>
+<html lang="en">
 <!-- What happens when the language attribute is commented out? -->
 <!-- <html lang="en"> -->
   <head>
