Remove title duplicate

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 
  Onödig JavaScript som gör sidan söligare och tar bort funktionalitet för att kunna backa på sidan.
  Saknar alt text på bilder, kan åtgardas genom att lägga till alt texter.
- HTML tag, deklaration och språk
+ HTML tag, deklaration och språk.
+ Duplicerade titlar, åtgärdas genom att ta bort en.
 
  4. Skriv om koden så att den följer tillgänglighetsstandarder.
 
@@ -25,7 +26,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 
 Tog bort all JavaScript kod då den inte bidrar med någonting för användaren eller ägaren, bara gör sidan mer långsam.
 Jag har lag till alt texter på alla bilder då det är viktigt för användare som använder skärmläsare eller om bilden inte laddas in.
-Fixat html Tag, deklaration och språk till engelska.
+Fixat html Tag, deklaration och språk till engelska. Jag har tagit bort en titel då det fanns två.
 
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
@@ -41,7 +42,6 @@ Fixat html Tag, deklaration och språk till engelska.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Only one `<title>` should be used; multiple titles can cause unexpected behavior and negatively impact SEO and accessibility. -->
-    <title>Vase Vista - Artisanal Vases</title>
     <title>Vase Vista - Artisanal Vases</title>
     <meta name="description" content="Elevating spaces through thoughtfully designed vessels that blend form and function in perfect harmony." />
     <link rel="stylesheet" href="styles.css" />
