Load smaller pictures for page load speed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
  Saknar alt text på bilder, kan åtgardas genom att lägga till alt texter.
  HTML tag, deklaration och språk. A taggar som inte leder någonstans, kan åtgärdas genom att ta bort dem eller lägga till en länk.
  Duplicerade titlar, åtgärdas genom att ta bort en.
+ Bilder laddas in i alldeles för stor storlek, kan åtgärdas genom att ladda in bilder i mindre storlek.
 
  4. Skriv om koden så att den följer tillgänglighetsstandarder.
 
@@ -27,6 +28,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 Tog bort all JavaScript kod då den inte bidrar med någonting för användaren eller ägaren, bara gör sidan mer långsam.
 Jag har lag till alt texter på alla bilder då det är viktigt för användare som använder skärmläsare eller om bilden inte laddas in.
 Fixat html Tag, deklaration och språk till engelska. Jag har tagit bort en titel då det fanns två. Jag ändrade en anchor tagg till p tagg då det inte ledde någonstans.
+Jag har ändrat storleken på bilderna så att de laddas in snabbare och inte tar upp onödig bandbredd.
 
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
@@ -82,7 +84,7 @@ Fixat html Tag, deklaration och språk till engelska. Jag har tagit bort en tite
             </div>
           </div>
           <div class="hero-image">
-            <img src="https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?q=80&w=1887&auto=format&fit=crop" alt="Elegant ceramic vase with minimalist design">
+            <img src="https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?q=80&w=840&auto=format&fit=crop" alt="Elegant ceramic vase with minimalist design">
           </div>
         </div>
       </section>
@@ -122,7 +124,7 @@ Fixat html Tag, deklaration och språk till engelska. Jag har tagit bort en tite
             Ensure heading levels are used logically for better accessibility and screen reader navigation. -->
             <div class="product-card">
               <div class="product-image">
-                <img src="https://images.unsplash.com/photo-1581783342308-f792dbdd27c5?q=80&w=1964&auto=format&fit=crop" alt="Mouth-blown glass vase">
+                <img src="https://images.unsplash.com/photo-1581783342308-f792dbdd27c5?q=80&w=400&auto=format&fit=crop" alt="Mouth-blown glass vase">
               </div>
               <div class="product-info">
                 <span class="product-category">Glass</span>
@@ -146,7 +148,7 @@ Fixat html Tag, deklaration och språk till engelska. Jag har tagit bort en tite
 
             <div class="product-card">
               <div class="product-image">
-                <img src="https://images.unsplash.com/photo-1582131503261-fca1d1c0589f?q=80&w=1974&auto=format&fit=crop" alt="Ceramic, organic and handcrafted vase.">
+                <img src="https://images.unsplash.com/photo-1582131503261-fca1d1c0589f?q=80&w=400&auto=format&fit=crop" alt="Ceramic, organic and handcrafted vase.">
               </div>
               <div class="product-info">
                 <span class="product-category">Ceramic</span>
@@ -164,7 +166,7 @@ Fixat html Tag, deklaration och språk till engelska. Jag har tagit bort en tite
         <div class="container">
           <div class="philosophy-content">
             <div class="philosophy-image">
-              <img src="https://images.unsplash.com/photo-1576020799627-aeac74d58064?q=80&w=1964&auto=format&fit=crop" alt="Fancy table with old plates, gold forks, tiny pumpkins, and candles.">
+              <img src="https://images.unsplash.com/photo-1576020799627-aeac74d58064?q=80&w=840&auto=format&fit=crop" alt="Fancy table with old plates, gold forks, tiny pumpkins, and candles.">
               <div class="quote-box">
                 <!-- a-tag, should be p-tag -->
                 <p>"Simplicity is the ultimate sophistication."</p>
