--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
  HTML tag, deklaration och språk. A taggar som inte leder någonstans, kan åtgärdas genom att ta bort dem eller lägga till en länk.
  Duplicerade titlar, åtgärdas genom att ta bort en.
  Bilder laddas in i alldeles för stor storlek, kan åtgärdas genom att ladda in bilder i mindre storlek.
-För många <h1> taggar, kan åtgärdas genom att byta ut en till <h2> eller <h3> beroende på vilken nivå det ska vara.
+ För många <h1> taggar, kan åtgärdas genom att byta ut en till <h2> eller <h3> beroende på vilken nivå det ska vara.
+ Dåliga färgväljningar, kan åtgärdas genom att använda färger som är mer tillgängliga för färgblinda.
 
  4. Skriv om koden så att den följer tillgänglighetsstandarder.
 
@@ -31,6 +32,7 @@ Jag har lag till alt texter på alla bilder då det är viktigt för användare 
 Fixat html Tag, deklaration och språk till engelska. Jag har tagit bort en titel då det fanns två. Jag ändrade en anchor tagg till p tagg då det inte ledde någonstans.
 Jag har ändrat storleken på bilderna så att de laddas in snabbare och inte tar upp onödig bandbredd.
 Tagit bort onödiga <h1> taggar och bytt ut dem till <h2> och <h3> taggar beroende på vilken nivå det ska vara.
+Jag har ändrat färgerna på sidan så att de är mer tillgängliga för färgblinda.
 
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
