Fix broken href location

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
  För många <h1> taggar, kan åtgärdas genom att byta ut en till <h2> eller <h3> beroende på vilken nivå det ska vara.
  Dåliga färgväljningar, kan åtgärdas genom att använda färger som är mer tillgängliga för färgblinda.
  Dubbla ids på element och ologiska tabindexer, kan åtgärdas genom att ta bort id och ha en standard tabindex.
+ Trasig hrefs, kan åtgärdas genom att ange rätt sökväg.
 
  4. Skriv om koden så att den följer tillgänglighetsstandarder.
 
@@ -35,6 +36,7 @@ Jag har ändrat storleken på bilderna så att de laddas in snabbare och inte ta
 Tagit bort onödiga <h1> taggar och bytt ut dem till <h2> och <h3> taggar beroende på vilken nivå det ska vara.
 Jag har ändrat färgerna på sidan så att de är mer tillgängliga för färgblinda.
 Jag har tagit bort onödiga ids som dessutom var dubbletter och låtit tabindex vara som standard.
+Jag har fixat trasiga sökvägar.
 
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
@@ -70,7 +72,7 @@ Jag har tagit bort onödiga ids som dessutom var dubbletter och låtit tabindex 
             <li><a href="#home">Home</a></li>
             <li><a href="#collection">Collection</a></li>
             <li><a href="#philosophy">Philosophy</a></li>
-            <li><a href="404.html">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
