--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
  Dåliga färgväljningar, kan åtgärdas genom att använda färger som är mer tillgängliga för färgblinda.
  Dubbla ids på element och ologiska tabindexer, kan åtgärdas genom att ta bort id och ha en standard tabindex.
  Trasig hrefs, kan åtgärdas genom att ange rätt sökväg.
+ Taggar som inte är semantiskt korrekt går att byta.
 
  4. Skriv om koden så att den följer tillgänglighetsstandarder.
 
@@ -37,6 +38,8 @@ Tagit bort onödiga <h1> taggar och bytt ut dem till <h2> och <h3> taggar beroen
 Jag har ändrat färgerna på sidan så att de är mer tillgängliga för färgblinda.
 Jag har tagit bort onödiga ids som dessutom var dubbletter och låtit tabindex vara som standard.
 Jag har fixat trasiga sökvägar.
+Ändrat Divs med funktionalitet av button till en button
+
 
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
@@ -67,7 +70,6 @@ Jag har fixat trasiga sökvägar.
       <div class="container">
         <nav class="navbar">
           <a href="#home" class="logo">Vase Vista</a>
-          <!-- Navigation menu with duplicate IDs, inconsistent tabindex, and broken links to a 404 page -->
           <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#collection">Collection</a></li>
@@ -84,8 +86,6 @@ Jag har fixat trasiga sökvägar.
         <div class="container">
           <div class="hero-content">
             <span class="subtitle">Artisanal Excellence</span>
-            <!-- Two <h1> tags inside .container may affect accessibility and SEO. -->
-
             <h1>Timeless Beauty <br />in Every Curve</h1>
             <p>
               Each piece tells a story of craftsmanship and elegance, designed
@@ -115,11 +115,10 @@ Jag har fixat trasiga sökvägar.
             <h2>Curated Excellence</h2>
           </div>
 
-          <!-- Use a <button> instead of a <div> to improve accessibility -->
           <div class="category-filters">
-            <div class="filter-btn active">All</div>
+            <button class="filter-btn active">All</button>
             <button class="filter-btn">Ceramic</button>
-            <div class="filter-btn">Glass</div>
+            <button class="filter-btn">Glass</button>
             <button class="filter-btn">Porcelain</button>
           </div>
 
