--- a/index.html
+++ b/index.html
@@ -270,20 +270,24 @@ Jag har fixat trasiga sökvägar.
             <div class="contact-info">
               <div class="info-card">
                 <h3>Visit Our Studio</h3>
-                <p>123 Design Avenue<br />Studio 405<br />New York, NY 10001</p>
+                <p>123 Design Avenue</p>
+                <p>Studio 405</p>
+                <p>New York, NY 10001</p>
               </div>
 
               <div class="info-card">
                 <h3>Opening Hours</h3>
-                <p>
-                  Monday - Friday: 10am - 6pm<br />Saturday: 11am - 5pm<br />Sunday:
-                  Closed
+                <p>Monday - Friday: 10am - 6pm</p>
+                <p>Saturday: 11am - 5pm</p>
+                <p>Sunday: Closed</p>
                 </p>
               </div>
 
               <div class="info-card">
                 <h3>Get in Touch</h3>
-                <p>info@vasevista.com<br />+1 (212) 555-1234<br />@vasevista</p>
+                <p>info@vasevista.com</p>
+                <p>1 (212) 555-1234</p>
+                <p>@vasevista</p>
               </div>
             </div>
           </div>
