--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@ Jag har fixat trasiga sökvägar.
             <div class="footer-column">
               <h4>Quick Links</h4>
               <ul>
-                <li><p href="#home">Home</p></li>
-                <li><p href="#collection">Collection</p></li>
-                <li><p href="#philosophy">Philosophy</p></li>
-                <li><p href="#contact">Contact</p></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#collection">Collection</a></li>
+                <li><a href="#philosophy">Philosophy</a></li>
+                <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
 
