--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@ Jag har fixat trasiga sökvägar.
             <div class="footer-column">
               <h4>Connect</h4>
               <ul>
-                <li><p href="#">Instagram</p></li>
-                <li><p href="404.html">Pinterest</p></li>
-                <li><p href="#">LinkedIn</p></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Pinterest</a></li>
+                <li><a href="#">LinkedIn</a></li>
               </ul>
             </div>
           </div>
@@ -335,8 +335,8 @@ Jag har fixat trasiga sökvägar.
           <p>&copy; 2023 Vase Vista. All rights reserved.</p>
 
           <div class="footer-legal">
-            <a href="404.html">Privacy Policy</a>
-            <a href="404.html">Terms of Service</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
           </div>
         </div>
       </div>
