Remove uneccesairy  defer on script tag

--- a/index.html
+++ b/index.html
@@ -342,6 +342,6 @@ Jag har fixat trasiga sökvägar.
       </div>
     </footer>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
   </body>
 </html>
