--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ Jag har fixat trasiga sökvägar.
  6. Testa din nya kod med andra verktyg för tillgänglighet.
 
  7. Skriv en kort reflektion över hur det var att göra uppgiften. Vad var svårt? Vad lärde du dig?
+
+Jag tyckte att det var roligt att göra uppgiften, den var lite små knepig men lärde mig knep för att sidoinladdningar snabbare, och hur man gör för att få bättre tillgänglighet för alla.
  ____________________________________________________________________________________________________
 
 -->
